Fix (NONE) fix spacing between blocks

--- a/source/_patterns/01-molecules/02-blocks/04-block-info.scss
+++ b/source/_patterns/01-molecules/02-blocks/04-block-info.scss
@@ -2,7 +2,7 @@
   padding : $paddingStandard $paddingMini;
   background-color : $colorGallery;
   text-align : center;
-
+  margin-bottom: $marginStandard;
 
   @media only screen and (min-width: $breakpointDesktop) {
     padding : ($paddingStandard + $paddingMini) $paddingStandard;
