--- a/source/_patterns/01-molecules/02-blocks/block-base.scss
+++ b/source/_patterns/01-molecules/02-blocks/block-base.scss
@@ -1,5 +1,5 @@
 .block {
-  margin-bottom: $marginStandard;
+  padding-bottom : $paddingStandard;
   line-height : $lineHeightNormal;
 }
 
